--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,12 +4,12 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title= 'Pixel Art to CSS'
-    meta(name='description', content='Draw and animate Pixel Art, export the results to CSS and share or download them')
+    meta(name='description', content='Draw and animate Pixel Art, export the results to CSS and download them')
     meta(name='viewport', content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0')
     meta(property='og:url', content='https://www.pixelartcss.com/')
     meta(property='og:type', content='website')
     meta(property='og:title', content='Pixel Art to CSS')
-    meta(property='og:description', content='Draw and animate Pixel Art, export the results to CSS and share or download them')
+    meta(property='og:description', content='Draw and animate Pixel Art, export the results to CSS and download them')
     meta(property='og:image', content='http://www.jvalen.com/pixelarttocss/logo-pixelarttocss.png')
     link(rel='apple-touch-icon' href='apple-touch-icon.png')
     link(rel='icon' type='image/png' href='regular-icon.png' sizes='192x192')
