--- a/src/css/components/_CopyCss.css
+++ b/src/css/components/_CopyCss.css
@@ -12,8 +12,7 @@
   }
 
   .copy-css__string {
-    overflow-y: scroll;
-    height: 20em;
+    overflow-x: scroll;
     background-color: $color-mineShaft;
     color: $color-silver;
     padding: 0.5em;
