--- a/src/css/components/_Modal.css
+++ b/src/css/components/_Modal.css
@@ -19,7 +19,10 @@
       margin: 1em auto;
       display: table;
     }
+  }
 
+  .modal__load,
+  .modal__body {
     fieldset {
       padding: 1em 0;
 
