--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -30,6 +30,8 @@ $color-chathamsBlue: #164075;
 $color-chambray: #2f5382;
 $color-cloudBurst: #253c5a;
 
+$color-shrub: #0e8044;
+
 $color-alto: #e0e0e0;
 $color-silveChalice: #a0a0a0;
 $color-nobel: #b7b7b7;
