--- a/src/css/components/_Output.css
+++ b/src/css/components/_Output.css
@@ -1,17 +1,31 @@
 .output {
+  position: relative;
   text-align: center;
-  button.copy-to-clipboard {
-    @mixin button brown;
-    padding: 0.3em 0.6em 0.1em 0.7em;
-    margin: 0.5em 0.5em 0;
+  .copy-to-clipboard__container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    button.copy-to-clipboard {
+      @mixin button brown;
+      padding: 0.1em 0.4em 0em 0.5em;
+      margin: 0.5em 0.5em 0;
+    }
+    span {
+      background-color: $color-shrub;
+      color: white;
+      padding: 0.1em 1.6em;
+      display: none;
+      &.show {
+        display: inline;
+      }
+    }
   }
   .output__text {
     font-family: $font-monospace;
     overflow-x: auto;
-    margin: 1em auto;
     background-color: $color-mineShaft;
     color: $color-silver;
-    padding: 0.5em;
+    padding: 3em 0.5em 0;
     text-align: left;
     display: block;
     width: 100%;
