--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -41,3 +41,4 @@
 @import 'components/_CopyCss.css';
 @import 'components/_ColorPicker.css';
 @import 'components/_Duration.css';
+@import 'components/_CellInfo.css';
