--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -42,3 +42,4 @@
 @import 'components/_ColorPicker.css';
 @import 'components/_Duration.css';
 @import 'components/_CellInfo.css';
+@import 'components/_PreviewBox.css';
