--- a/src/css/components/_Frame.css
+++ b/src/css/components/_Frame.css
@@ -21,7 +21,7 @@
   }
 
   .delete {
-    @mixin icon trash-o;
+    @mixin icon trash;
 
     font-size: 1.2em;
     top: 0;
@@ -29,7 +29,7 @@
   }
 
   .duplicate {
-    @mixin icon files-o;
+    @mixin icon duplicate;
 
     bottom: 23px;
     border-width: 2px 0 0 2px;
