--- a/src/views/mainLayout.pug
+++ b/src/views/mainLayout.pug
@@ -11,6 +11,7 @@ html
     meta(property='og:title', content='Pixel Art to CSS')
     meta(property='og:description', content='Draw and animate Pixel Art, export the results to CSS and download them')
     meta(property='og:image', content='http://www.jvalen.com/pixelarttocss/logo-pixelarttocss.png')
+    block meta
     link(rel='apple-touch-icon' href='apple-touch-icon.png')
     link(rel='icon' type='image/png' href='regular-icon.png' sizes='192x192')
     link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
