--- a/src/views/mainLayout.pug
+++ b/src/views/mainLayout.pug
@@ -39,9 +39,9 @@ html
                 span JVALEN
                 img(
                   height="26"
-                  width="26"
-                  src="bmac-icon.svg"
-                  alt="Buy Me A Coffee"
+                  width="39"
+                  src="bmac-icon.png"
+                  alt="Ko-fi"
                 )
             div
               iframe(
